--- a/shop/templates/select_address.html
+++ b/shop/templates/select_address.html
@@ -36,18 +36,18 @@
 									<!-- nav item -->
 									<li class="nav-item">
 										<!-- nav link -->
-										<a class="nav-link" aria-current="page" href="account-orders.html">
+										<a class="nav-link" aria-current="page" href="{% url 'order_view' %}">
 											<i class="feather-icon icon-shopping-bag me-2"></i>
 											Your Orders
 										</a>
 									</li>
 									<!-- nav item -->
-									<li class="nav-item">
-										<a class="nav-link" href="account-settings.html">
-											<i class="feather-icon icon-settings me-2"></i>
-											Settings
-										</a>
-									</li>
+<!--									<li class="nav-item">-->
+<!--										<a class="nav-link" href="account-settings.html">-->
+<!--											<i class="feather-icon icon-settings me-2"></i>-->
+<!--											Settings-->
+<!--										</a>-->
+<!--									</li>-->
 									<!-- nav item -->
 									<li class="nav-item">
 										<a class="nav-link active" href="account-address.html">
@@ -56,19 +56,19 @@
 										</a>
 									</li>
 									<!-- nav item -->
-									<li class="nav-item">
-										<a class="nav-link" href="account-payment-method.html">
-											<i class="feather-icon icon-credit-card me-2"></i>
-											Payment Method
-										</a>
-									</li>
+<!--									<li class="nav-item">-->
+<!--										<a class="nav-link" href="account-payment-method.html">-->
+<!--											<i class="feather-icon icon-credit-card me-2"></i>-->
+<!--											Payment Method-->
+<!--										</a>-->
+<!--									</li>-->
 									<!-- nav item -->
-									<li class="nav-item">
-										<a class="nav-link" href="account-notification.html">
-											<i class="feather-icon icon-bell me-2"></i>
-											Notification
-										</a>
-									</li>
+<!--									<li class="nav-item">-->
+<!--										<a class="nav-link" href="account-notification.html">-->
+<!--											<i class="feather-icon icon-bell me-2"></i>-->
+<!--											Notification-->
+<!--										</a>-->
+<!--									</li>-->
 									<!-- nav item -->
 									<li class="nav-item">
 										<hr />
